crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__empty_file.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
# fmt: off

    # this does not work because there are no statements

# fmt: on
```

## Output
```python
# fmt: off

# this does not work because there are no statements

# fmt: on
```
