crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__fmt_off_unclosed_trailing_comment.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
# Regression test for https://github.com/astral-sh/ruff/issues/8211

# fmt: off
from dataclasses import dataclass

@dataclass
class A:
    x: int # Optional[int]
```

## Output
```python
# Regression test for https://github.com/astral-sh/ruff/issues/8211

# fmt: off
from dataclasses import dataclass

@dataclass
class A:
    x: int # Optional[int]
```
