crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__form_feed.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
# fmt: off
# DB layer  (form feed at the start of the next line)

# fmt: on

def test():
    pass
```

## Output
```python
# fmt: off
# DB layer  (form feed at the start of the next line)

# fmt: on


def test():
    pass
```
