crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__indented_not_module_level.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/fmt_on_off/indented_not_module_level.py
---
## Input
```python
# Indented fmt: off is not module-level; should still add trailing newline
if True:
    x = 1
  # fmt: off
    y = 2```

## Output
```python
# Indented fmt: off is not module-level; should still add trailing newline
if True:
    x = 1
    # fmt: off
    y = 2
```
