crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__last_statement.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
def test():
    # fmt: off

    a  + b



        # suppressed comments

a   + b # formatted
```

## Output
```python
def test():
    # fmt: off

    a  + b



        # suppressed comments


a + b  # formatted
```
